Update idea.vmoptions.md